# paddy

./: pyproject.toml  pyrightconfig.json
notebooks/: 01.ipynb  01_eda.ipynb  comp_sub.ipynb
src/: competition.py  competition_utils.py  configs.py  pipeline.py
